fix code display when lines of code too long

--- a/app/assets/stylesheets/components/image_box.scss
+++ b/app/assets/stylesheets/components/image_box.scss
@@ -161,3 +161,6 @@
 	}
 }
 
+.image-code{
+	max-width:717px; 
+}
